公式バージョン 4.6.0 を適用
削除されたファイルの適用はまだ